Theme and homepage fixes: remove subscribe link, filter posts, style updates, avatar uncropped, title above logo and bold

--- a/themes/mini/static/css/style.css
+++ b/themes/mini/static/css/style.css
@@ -256,15 +256,15 @@ nav.navigation a.button {
 
 .profile .avatar {
   display: inline-block;
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
+  width: auto;
+  height: auto;
+  border-radius: 0;
 }
 
 .profile h1 {
-  font-weight: 400;
+  font-weight: 700;
   letter-spacing: 0px;
-  font-size: 20px;
+  font-size: 44px;
   color: #404040;
   margin-bottom: 0;
   margin-top: 0;
